--- a/slides/Prolog-Listas.Rmd
+++ b/slides/Prolog-Listas.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Prolog: Listas | MRC"
 author: "Víctor Peinado"
-date: "18 de diciembre de 2015"
+date: "14-15 de enero de 2016"
 
 output:
   rmarkdown::tufte_handout:
